--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 # YOLO11 Backend API Dependencies
+# 核心依赖（ultralytics 会自动安装 torch/torchvision）
 ultralytics>=8.3.0
 opencv-python>=4.8.0
 numpy>=1.24.0
-torch>=2.0.0
-torchvision>=0.15.0
 Pillow>=10.0.0
+
+# API 服务
 fastapi>=0.104.0
 uvicorn>=0.24.0
 python-multipart>=0.0.6
