fix: CORS issue - use relative API path

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,3 +1,4 @@
 # 生产环境配置
-# 后端 API 地址（服务器公网IP + 端口）
-VITE_API_URL=http://39.108.91.231:8000
+# 后端 API 地址
+# 使用空字符串，让前端通过 Nginx 代理访问 /api（同源，无跨域问题）
+VITE_API_URL=
